# abb-cvc-extract

./: .gitignore  Dockerfile  README.md  abb_cvc_extract.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml  release.yaml
tests/: conftest.py  test_extraction.py
