[project]
name = "abb-cvc-extract"
version = "1.1.0"
description = "Extract time-series data from Aussie Broadband CVC capacity graph images"
requires-python = ">=3.12"
license = "MIT"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-third-party = ["cv2", "numpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
